Added PUT endpoint to user.
